tests/fixtures/valid/comment.mmd
%% This is a line comment
flowchart TD
    %% Comment before Start
    Start --> A[println 'Hello'] %% Inline comment
    A --> End
%% End of file comment
