tests/fixtures/invalid/duplicate_node_label.mmd
flowchart TD
    Start --> A[print 'hello']
    A[print 'world'] --> B[print 'foo']
    B --> End
